package juanavila.mastermind.models;

import java.util.ArrayList;
import java.util.List;

public class Mastermind {

	private static final int MAX_LONG = 10;

	private SecretCombination secretCombination;

	private List<ProposedCombination> proposedCombinations;

	private List<Result> results;

	private int attempts;

	public Mastermind() {
		this.reset();
	}

	public void reset() {
		this.secretCombination = new SecretCombination();
		this.proposedCombinations = new ArrayList<>();
		this.results = new ArrayList<>();
		this.attempts = 0;
	}

	public void addProposedCombination(ProposedCombination proposedCombination) {
		this.proposedCombinations.add(proposedCombination);
		this.results.add(this.secretCombination.getResult(proposedCombination));
		this.attempts++;
	}

	public boolean isLooser() {
		return this.attempts == Mastermind.MAX_LONG;
	}
	
	public boolean isWinner() {
		return this.attempts > 0 && this.results.get(this.attempts-1).isWinner();
	}

	public int getAttempts() {
		return this.attempts;
	}

	public ProposedCombination getProposedCombination(int position) {
		return this.proposedCombinations.get(position);
	}

	public Result getResult(int position) {
		return this.results.get(position);
	}

	public boolean isFinished() {
		return isLooser() || isWinner();
	}

	public GameMemento createMemento() {
		return new GameMemento(this.proposedCombinations, this.results, this.attempts);
	}

	public void restore(GameMemento memento) {
		this.proposedCombinations = memento.getProposedCombinations();
		this.results = memento.getResults();
		this.attempts = memento.getAttempts();
	}
}
