package juanavila.mastermind.models;

public interface Session {
    StateValue getValue();
}
